@startuml
title Dromos - Core data model
hide methods
hide stereotypes
skinparam shadowing false

entity users {
  * id : bigint <<PK>>
  --
  name : varchar
  email : varchar <<unique>>
  password : varchar
}

entity route_plans {
  * id : bigint <<PK>>
  --
  user_id : bigint <<FK>>
  route_mode : optimized | ordered
  options : json
  total_distance_meters : bigint
  total_duration_seconds : bigint
  encoded_polyline : text
  encoded_polylines : json
  provider_payload : json
}

entity stops {
  * id : bigint <<PK>>
  --
  route_plan_id : bigint <<FK>>
  type : start | visit
  input_order : integer
  optimized_order : integer
  address : text
  formatted_address : text
  latitude : decimal
  longitude : decimal
  place_id : varchar
  leg_distance_meters : bigint
  leg_duration_seconds : bigint
}

entity geocoded_address_cache {
  * id : bigint <<PK>>
  --
  normalized_address : varchar <<unique>>
  requested_address : text
  formatted_address : text
  latitude : decimal
  longitude : decimal
  place_id : varchar
  hit_count : bigint
  last_used_at : timestamp
}

entity sessions {
  * id : varchar <<PK>>
  --
  user_id : bigint <<nullable FK>>
  payload : longtext
  last_activity : integer
}

users ||--o{ route_plans : owns
route_plans ||--|{ stops : contains
users |o--o{ sessions : authenticates

note right of route_plans
  Saved results prevent API calls when an
  unchanged route is reopened or refreshed.
end note

note right of stops
  Stored coordinates prevent repeat geocoding
  while an existing route is edited.
end note

note right of geocoded_address_cache
  Shared across routes. A cache hit avoids a
  Geocoding API request and increments hit_count.
end note
@enduml

